fixed look on mobile

--- a/styles/Democracy.module.css
+++ b/styles/Democracy.module.css
@@ -15,7 +15,7 @@
 .rights {
   height: 600px;
   width: 600px;
-  margin-top: 30em;
+  margin-top: 10em;
   margin-left: 15em;
 }
 
